--- a/index.html
+++ b/index.html
@@ -320,8 +320,8 @@
                             <div class="col-lg-6">
                                 <div class="d-flex h-100">
                                     <div class="flex-shrink-0">
-                                        <img class="img-fluid" src="img/cake-1.jpg" alt=""
-                                            style="width: 150px; height: 85px;">
+                                        <img class="img-fluid" src="img/bdcake-1.jpg" alt=""
+                                            style="width: 300px; height: 300px;">
                                         <h4 class="bg-dark text-primary p-2 m-0">$99.00</h4>
                                     </div>
                                     <div
@@ -335,8 +335,8 @@
                             <div class="col-lg-6">
                                 <div class="d-flex h-100">
                                     <div class="flex-shrink-0">
-                                        <img class="img-fluid" src="img/cake-1.jpg" alt=""
-                                            style="width: 150px; height: 85px;">
+                                        <img class="img-fluid" src="img/bdcake-2.jpg" alt=""
+                                            style="width: 300px; height: 300px;">
                                         <h4 class="bg-dark text-primary p-2 m-0">$99.00</h4>
                                     </div>
                                     <div
@@ -350,8 +350,8 @@
                             <div class="col-lg-6">
                                 <div class="d-flex h-100">
                                     <div class="flex-shrink-0">
-                                        <img class="img-fluid" src="img/cake-1.jpg" alt=""
-                                            style="width: 150px; height: 85px;">
+                                        <img class="img-fluid" src="img/bdcake-3.jpg" alt=""
+                                            style="width: 300px; height: 300px;">
                                         <h4 class="bg-dark text-primary p-2 m-0">$99.00</h4>
                                     </div>
                                     <div
@@ -365,8 +365,8 @@
                             <div class="col-lg-6">
                                 <div class="d-flex h-100">
                                     <div class="flex-shrink-0">
-                                        <img class="img-fluid" src="img/cake-1.jpg" alt=""
-                                            style="width: 150px; height: 85px;">
+                                        <img class="img-fluid" src="img/bdcake-4.jpg" alt=""
+                                            style="width: 300px; height: 300px;">
                                         <h4 class="bg-dark text-primary p-2 m-0">$99.00</h4>
                                     </div>
                                     <div
@@ -380,8 +380,8 @@
                             <div class="col-lg-6">
                                 <div class="d-flex h-100">
                                     <div class="flex-shrink-0">
-                                        <img class="img-fluid" src="img/cake-1.jpg" alt=""
-                                            style="width: 150px; height: 85px;">
+                                        <img class="img-fluid" src="img/bdcake-5.jpg" alt=""
+                                            style="width: 300px; height: 300px;">
                                         <h4 class="bg-dark text-primary p-2 m-0">$99.00</h4>
                                     </div>
                                     <div
@@ -395,8 +395,8 @@
                             <div class="col-lg-6">
                                 <div class="d-flex h-100">
                                     <div class="flex-shrink-0">
-                                        <img class="img-fluid" src="img/cake-1.jpg" alt=""
-                                            style="width: 150px; height: 85px;">
+                                        <img class="img-fluid" src="img/bdcake-6.jpg" alt=""
+                                            style="width: 300px; height: 300px;">
                                         <h4 class="bg-dark text-primary p-2 m-0">$99.00</h4>
                                     </div>
                                     <div
@@ -414,8 +414,8 @@
                             <div class="col-lg-6">
                                 <div class="d-flex h-100">
                                     <div class="flex-shrink-0">
-                                        <img class="img-fluid" src="img/cake-2.jpg" alt=""
-                                            style="width: 150px; height: 85px;">
+                                        <img class="img-fluid" src="img/wdcake-1.jpg" alt=""
+                                            style="width: 300px; height: 300px;">
                                         <h4 class="bg-dark text-primary p-2 m-0">$99.00</h4>
                                     </div>
                                     <div
@@ -429,8 +429,8 @@
                             <div class="col-lg-6">
                                 <div class="d-flex h-100">
                                     <div class="flex-shrink-0">
-                                        <img class="img-fluid" src="img/cake-2.jpg" alt=""
-                                            style="width: 150px; height: 85px;">
+                                        <img class="img-fluid" src="img/wdcake-2.jpg" alt=""
+                                            style="width: 300px; height: 300px;">
                                         <h4 class="bg-dark text-primary p-2 m-0">$99.00</h4>
                                     </div>
                                     <div
@@ -444,8 +444,8 @@
                             <div class="col-lg-6">
                                 <div class="d-flex h-100">
                                     <div class="flex-shrink-0">
-                                        <img class="img-fluid" src="img/cake-2.jpg" alt=""
-                                            style="width: 150px; height: 85px;">
+                                        <img class="img-fluid" src="img/wdcake-3.jpg" alt=""
+                                            style="width: 300px; height: 300px;">
                                         <h4 class="bg-dark text-primary p-2 m-0">$99.00</h4>
                                     </div>
                                     <div
@@ -459,8 +459,8 @@
                             <div class="col-lg-6">
                                 <div class="d-flex h-100">
                                     <div class="flex-shrink-0">
-                                        <img class="img-fluid" src="img/cake-2.jpg" alt=""
-                                            style="width: 150px; height: 85px;">
+                                        <img class="img-fluid" src="img/wdcake-4.jpg" alt=""
+                                            style="width: 300px; height: 300px;">
                                         <h4 class="bg-dark text-primary p-2 m-0">$99.00</h4>
                                     </div>
                                     <div
@@ -474,8 +474,8 @@
                             <div class="col-lg-6">
                                 <div class="d-flex h-100">
                                     <div class="flex-shrink-0">
-                                        <img class="img-fluid" src="img/cake-2.jpg" alt=""
-                                            style="width: 150px; height: 85px;">
+                                        <img class="img-fluid" src="img/wdcake-5.jpg" alt=""
+                                            style="width: 300px; height: 300px;">
                                         <h4 class="bg-dark text-primary p-2 m-0">$99.00</h4>
                                     </div>
                                     <div
@@ -489,8 +489,8 @@
                             <div class="col-lg-6">
                                 <div class="d-flex h-100">
                                     <div class="flex-shrink-0">
-                                        <img class="img-fluid" src="img/cake-2.jpg" alt=""
-                                            style="width: 150px; height: 85px;">
+                                        <img class="img-fluid" src="img/wdcake-6.jpg" alt=""
+                                            style="width: 300px; height: 300px;">
                                         <h4 class="bg-dark text-primary p-2 m-0">$99.00</h4>
                                     </div>
                                     <div
@@ -508,8 +508,8 @@
                             <div class="col-lg-6">
                                 <div class="d-flex h-100">
                                     <div class="flex-shrink-0">
-                                        <img class="img-fluid" src="img/cake-3.jpg" alt=""
-                                            style="width: 150px; height: 85px;">
+                                        <img class="img-fluid" src="img/snack-1.jpg" alt=""
+                                            style="width: 300px; height: 300px;">
                                         <h4 class="bg-dark text-primary p-2 m-0">$99.00</h4>
                                     </div>
                                     <div
@@ -523,8 +523,8 @@
                             <div class="col-lg-6">
                                 <div class="d-flex h-100">
                                     <div class="flex-shrink-0">
-                                        <img class="img-fluid" src="img/cake-3.jpg" alt=""
-                                            style="width: 150px; height: 85px;">
+                                        <img class="img-fluid" src="img/snack-2.jpg" alt=""
+                                            style="width: 300px; height: 300px;">
                                         <h4 class="bg-dark text-primary p-2 m-0">$99.00</h4>
                                     </div>
                                     <div
@@ -538,8 +538,8 @@
                             <div class="col-lg-6">
                                 <div class="d-flex h-100">
                                     <div class="flex-shrink-0">
-                                        <img class="img-fluid" src="img/cake-3.jpg" alt=""
-                                            style="width: 150px; height: 85px;">
+                                        <img class="img-fluid" src="img/snack-3.jpg" alt=""
+                                            style="width: 300px; height: 300px;">
                                         <h4 class="bg-dark text-primary p-2 m-0">$99.00</h4>
                                     </div>
                                     <div
@@ -553,8 +553,8 @@
                             <div class="col-lg-6">
                                 <div class="d-flex h-100">
                                     <div class="flex-shrink-0">
-                                        <img class="img-fluid" src="img/cake-3.jpg" alt=""
-                                            style="width: 150px; height: 85px;">
+                                        <img class="img-fluid" src="img/snack-4.jpg" alt=""
+                                            style="width: 300px; height: 300px;">
                                         <h4 class="bg-dark text-primary p-2 m-0">$99.00</h4>
                                     </div>
                                     <div
@@ -568,8 +568,8 @@
                             <div class="col-lg-6">
                                 <div class="d-flex h-100">
                                     <div class="flex-shrink-0">
-                                        <img class="img-fluid" src="img/cake-3.jpg" alt=""
-                                            style="width: 150px; height: 85px;">
+                                        <img class="img-fluid" src="img/snack-5.jpg" alt=""
+                                            style="width: 300px; height: 300px;">
                                         <h4 class="bg-dark text-primary p-2 m-0">$99.00</h4>
                                     </div>
                                     <div
@@ -583,8 +583,8 @@
                             <div class="col-lg-6">
                                 <div class="d-flex h-100">
                                     <div class="flex-shrink-0">
-                                        <img class="img-fluid" src="img/cake-3.jpg" alt=""
-                                            style="width: 150px; height: 85px;">
+                                        <img class="img-fluid" src="img/snack-6.jpg" alt=""
+                                            style="width: 300px; height: 300px;">
                                         <h4 class="bg-dark text-primary p-2 m-0">$99.00</h4>
                                     </div>
                                     <div
